// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> renders correctly 1`] = `
<div
  className="avatar -regular"
>
  <div
    className="avatar--mask"
  >
    <img
      className="avatar--img"
      height={150}
      loading="lazy"
      width={150}
    />
  </div>
</div>
`;

exports[`<Avatar /> renders correctly with optional props 1`] = `
<div
  className="avatar class -regular"
>
  <div
    className="avatar--mask"
  >
    <img
      alt="Name"
      className="avatar--img"
      height={150}
      loading="lazy"
      src="https://www.thispersondoesnotexist.com/image"
      width={150}
    />
  </div>
</div>
`;
